# triage-agent

./: .env.example  .gitignore  Procfile  README.md  docker-compose.yml  hortlog -sne  pyproject.toml  railway.toml  render.yaml  requirements.txt  results.jsonl
app/: __init__.py
app/api/: __init__.py  auth.py  deps.py  main.py  mappers.py  middleware.py  routes.py
app/config/: __init__.py  constants.py  red_flag_rules.py  scoring.py  settings.py  symptom_synonyms.py
app/db/: __init__.py  database.py  models.py  repository.py
app/graph/: __init__.py  builder.py  node_names.py  routing.py  runner.py
app/models/: __init__.py  clinical.py  enums.py  state.py  trace.py
app/nodes/: __init__.py  build_response.py  confidence_scoring.py  extract_signals.py  factory.py  generate_explanation.py  merge_evidence.py  normalize_symptoms.py  parse_input.py  red_flag_detection.py  search_decision.py  search_medical_sources.py  urgency_classification.py
app/prompts/: __init__.py  base.py  explanation.py  extraction.py  red_flags.py  urgency.py
app/schemas/: __init__.py  config.py  debug.py  history.py  triage.py
frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json  vercel.json
mcp_server/: __init__.py  server.py
scripts/: amend_head.py  evaluate_dataset.py  msg_filter.py  test_neon.py
tests/: __init__.py  conftest.py  fakes.py  test_api.py  test_auth.py  test_confidence_scorer.py  test_graph_wiring.py  test_mcp_search.py  test_phase3_pipeline.py  test_red_flag_engine.py  test_search_decision.py  test_structured_llm.py  test_tools.py
(+41 files in other folders)
